# SPDX-FileCopyrightText: Copyright (c) 2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["scikit-build-core", "setuptools_scm", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "ast_canopy"
dynamic = ["version"]

[tool.scikit-build]
cmake.targets = ["pylibastcanopy"]
wheel.license-files = ["../LICENSE"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
root = ".."

[tool.ruff]
# Please use pyproject.toml from the project root
