# SPDX-FileCopyrightText: Copyright (c) 2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["scikit-build-core", "setuptools_scm", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "ast_canopy"
dynamic = ["version"]
readme = { file = "README.md", content-type = "text/markdown" }

[tool.scikit-build]
cmake.targets = ["pylibastcanopy"]
wheel.license-files = ["../LICENSE"]
# Be explicit about shipping header shims in sdists so wheels built from sdist
# (e.g., on PyPI) always contain these files.
sdist.include = ["ast_canopy/shim_include/**"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
root = ".."

[tool.ruff]
# Please use pyproject.toml from the project root
