# SPDX-FileCopyrightText: Copyright (c) 2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "numbast"
dynamic = ["version"]
description = "Numbast - auto Numba binding generation tool for CUDA C++."
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numba>=0.59.0",
  "numba-cuda>=0.20.0",
  "ast_canopy>=0.5.0",
  "pyyaml",
  "click",
  "jinja2",
]

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[project.scripts]
numbast = "numbast.tool:static_binding_generator"

[project.urls]
homepage = "https://github.com/NVIDIA/numbast"
repository = "https://github.com/NVIDIA/numbast"

[project.optional-dependencies]
dev = ["ruff"]
docs = [
  "sphinx>=7.0",
  "furo>=2024.1.29",
  "myst-nb>=1.1.0",
  "sphinx-copybutton>=0.5.2",
]

[tool.ruff]
# Please use pyproject.toml from the project root
