# SPDX-FileCopyrightText: Copyright (c) 2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "numbast"
dynamic = ["version"]
readme = { file = "README.md", content-type = "text/markdown" }
description = "Numbast - auto Numba binding generation tool for CUDA C++."
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numba>=0.59.0",
  "numba-cuda>=0.21.0,<0.23.0",
  "ast_canopy>=0.5.0",
  "pyyaml",
  "click",
  "jinja2",
]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
root = ".."

[project.scripts]
numbast = "numbast.tool:static_binding_generator"

[project.urls]
homepage = "https://github.com/NVIDIA/numbast"
repository = "https://github.com/NVIDIA/numbast"

[project.optional-dependencies]
dev = ["ruff"]
docs = ["sphinx>=7.0", "sphinx-copybutton>=0.5.2"]
test-cu12 = ["pytest", "cffi", "numba-cuda[cu12]>=0.21.0,<0.23.0"]
test-cu13 = [
  "pytest",
  "cffi",
  "cuda-toolkit[cudart,crt,curand,cccl,nvcc]==13.*",
  "numba-cuda[cu13]>=0.21.0,<0.23.0",
]


[tool.ruff]
# Please use pyproject.toml from the project root
