# SPDX-FileCopyrightText: Copyright (c) 2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "numbast"
dynamic = ["version"]
readme = { file = "README.md", content-type = "text/markdown" }
description = "Generate Numba CUDA bindings from CUDA C++ declarations."
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numba-cuda>=0.25.0",
  "ast_canopy>=0.5.0",
  "pyyaml",
  "click",
  "jinja2",
]

[tool.setuptools_scm]
root = ".."

[project.scripts]
numbast = "numbast.tool:static_binding_generator"

[project.urls]
homepage = "https://github.com/NVIDIA/numbast"
repository = "https://github.com/NVIDIA/numbast"
documentation = "https://nvidia.github.io/numbast/latest/"
issues = "https://github.com/NVIDIA/numbast/issues"

[project.optional-dependencies]
dev = ["ruff"]
docs = ["sphinx>=7.0", "sphinx-copybutton>=0.5.2"]
mlir = ["numba-cuda-mlir", "cuda-toolkit[nvrtc]"]
test-cu12 = [
  "pytest",
  "cffi",
  "cuda-core>=0.7.0,<2.0.0",
  "numba-cuda[cu12]>=0.25.0",
]
test-cu12-mlir = [
  "pytest",
  "cffi",
  "cuda-toolkit[nvrtc]==12.9.*",
  "cuda-core>=0.7.0,<2.0.0",
]
test-cu13 = [
  "pytest",
  "cffi",
  "cuda-toolkit[cudart,crt,curand,cccl,nvcc]==13.2.*",
  "cuda-core>=0.7.0,<2.0.0",
  "numba-cuda[cu13]>=0.25.0",
]
test-cu13-mlir = [
  "pytest",
  "cffi",
  "cuda-toolkit[cudart,crt,curand,cccl,nvcc,nvrtc]==13.2.*",
  "cuda-core>=0.7.0,<2.0.0",
]


[tool.ruff]
# Please use pyproject.toml from the project root
