# SPDX-FileCopyrightText: Copyright (c) 2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.targets = ["curand_host"]
cmake.build-type = "Release"

[project]
name = "curand_host"
version = "0.0.1"
description = "Add float16 bindings to Numba."
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/NVIDIA/numbast"
repository = "https://github.com/NVIDIA/numbast"
